# odisc

./: .gitignore  Cargo.toml  README.md  config.json  package.json  pnpm-lock.yaml  readme.md  tsconfig.json
.github/workflows/: build.yml  tauri-build.yml  tauri_build.yml
patches/: binpack@0.1.0.patch  node-osc@9.1.7.patch
src/: handlers.rs  index.ts  main.rs  midi.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/odisc/: mod.rs
src-tauri/src/odisc/main/: handlers.rs  helpers.rs  midi.rs  mod.rs
src/routes/: +page.svelte
tauri/odisc/: .gitignore  copy-binary.sh  package.json
tauri/odisc/src-tauri/: Cargo.toml  tauri.conf.json
tauri/odisc/src-tauri/capabilities/: default.json
tauri/odisc/src-tauri/icons/: icon.icns
tauri/odisc/src-tauri/src/: lib.rs
